<resources>
    <string name="app_name">光正孵化器</string>

    <string name="title_login">登录</string>
    <string name="title_register">注册</string>

    <string name="item_title_ele_jiankong">用电监控</string>
    <string name="item_title_public_control">公共控制</string>
    <string name="item_title_mode">模式</string>
    <string name="item_ele_energy">能耗</string>
    <string name="item_title_fix">维修投诉</string>
    <string name="item_title_zhibanbiao">值班表</string>
    <string name="item_title_pay">缴费</string>
    <string name="item_title_publicmsg">公告消息</string>
    <string name="item_title_company">企业入驻</string>

    <string name="abc">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.~!</string>
    <string name="contacts_way">服务热线:020-8636-1851</string>
    <string name="company_name_CH">广州三川控制系统工程设备有限公司</string>
    <string name="company_reserved">Copyright © 2017 广州三川控制系统工程设备有限公司版权所有</string>
    <string name="tx_version_code">版本号:</string>
    <string name="tx_share_app">分享</string>
    <string name="tx_share_app_des">https://www.pgyer.com/t3yB</string>
    <!--反馈页面相关字符串-->
    <string name="title_feedback">意见反馈</string>
    <string name="tips_feedbak_success">已收到您的反馈,我们会认真查看,并尽快修复及完善,感谢您的支持!</string>
    <string name="product_suggest">产品建议</string>
    <string name="progress_error">程序错误</string>
    <string name="title_feedback_type">请选择反馈类型</string>
    <string name="tips_content_is_empty">请输入内容</string>
    <string name="tips_contacts_is_empty">请输入您的联系方式</string>
    <string name="tips_contacts_is_error">您的联系方式格式有误</string>
    <string name="json_feedback_type">反馈类型</string>
    <string name="json_feedback_content">反馈内容</string>
    <string name="json_feedback_contacts">联系方式</string>

    <!--activity_feedback.xml-->
    <string name="tx_feedback_type">选择反馈类型</string>
    <string name="product_suggestion">产品建议</string>
    <string name="tx_progerss_error">程序错误</string>
    <string name="please_enter_question">请输入您的问题或建议</string>
    <string name="tx_contacts_type">联系方式(邮箱/QQ)</string>
    <string name="commit">提 交</string>
    <string name="email">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@._!?</string>

    <!--activity_setting.xml-->
    <string name="profile">个人资料</string>
    <string name="nav_tx_version_update">版本更新</string>
    <string name="nav_tx_login_out">注销登录</string>
    <string name="label_select_picture">选择图片</string>
    <string name="tips_upload_failed">上传失败</string>
    <string name="tips_uploading">正在上传图片</string>
    <string name="queding">确定</string>
    <string name="qvxiao">取消</string>
    <string name="tips_teltype_error">手机号码格式不正确!</string>
    <string name="tips_please_wait">请稍后...</string>
    <string name="count" >%1$d/70</string>

    <!--dsdas-->
    <string name="created_success">创建成功!</string>
    <string name="ok">确定</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="delete">删除</string>
    <string name="warning_empty_name">名称不能为空</string>
    <string name="info_saving">保存中...</string>
    <string name="warning_not_save">修改的内容未保存是否退出?</string>
    <string name="info_delete_scene">正在删除场景</string>
    <string name="subtitle_manager">管理</string>
    <string name="subtitle_finish">完成</string>
    <string name="warning_is_control">是否执行该场景</string>
    <string name="LinearLayoutManager">LinearLayoutManager</string>
    <string name="wuyefei">上月应缴物业费%1$s元</string>
    <string name="dianfei">上月应缴电费%1$s元</string>
    <string name="tips_nodata">当月暂无数据</string>
    <string name="tips_wx_isnotinstall">当前手机未安装微信客户端</string>
    <string name="tips_getorder_failed">获取订单失败</string>


</resources>
