<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_size"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:background="@drawable/ripple"
                android:id="@+id/back"
                android:layout_width="60dp"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="14dp"
                    android:src="@drawable/ic_back" />
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:maxLength="6"
                android:maxLines="1"
                android:text="反馈与建议"
                android:textColor="@color/white"
                android:textSize="@dimen/actionBarTitleSize" />

            <RelativeLayout
                android:onClick="rightSubTitleClicked"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/rightSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="提交"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/actionBarSubTitleSize" />
            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f2f4f5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:text="@string/tx_feedback_type" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#888888" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/chanpinjianyi"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/product_suggestion"
                        android:textColor="@color/textColor" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/chengxucuowu"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/tx_progerss_error"
                        android:textColor="@color/textColor" />
                </RadioGroup>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">

                <net.suntrans.looney.widgets.EditView
                    android:id="@+id/jianyi"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:background="@color/white"
                    android:gravity="start"
                    android:hint="@string/please_enter_question"
                    android:maxLength="70"
                    android:padding="8dp"
                    android:paddingLeft="16dp"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="16dp"
                    android:text="70" />

            </RelativeLayout>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/white"
                android:digits="@string/email"
                android:hint="@string/tx_contacts_type"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#f2f4f5" />


        </LinearLayout>
    </LinearLayout>
</layout>